--- a/src/App.css
+++ b/src/App.css
@@ -1,199 +1,7 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-
-body {
-  background: linear-gradient(180deg, #FFB3B3 0%, #FF8080 100%);
-  position: relative;
-  width: 100%;
-  height: 1531px;
-}
-
-header {
-  position: absolute;
-  width: 537px;
-  height: 240px;
-  font-family: 'Bebas Neue';
-  font-style: normal;
-  font-weight: 100;
-  font-size: 30px;
-  line-height: 40px;
-  color: #545974;
-  margin-top: 20px;
-  margin-left: 50px;
-}
-
-.decorate-h1 {
-  color: #FF6464;
-  border-bottom: 5px solid #FF6464;
-  line-height: 20px;
-  max-width: 120px;
-  margin-top: 45px;
-}
-
-.title {
-  margin-top: 20px;
-}
-
-.paragrafo-1 {
-  color: white;
-  position: absolute;
-  width: 431px;
-  height: 48px;
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 48px;
-}
-
-.descript-pai {
-  margin-top: 60px;
-}
-
-.descript {
-  color: white;
-  font-family: 'Bebas Neue';
-  font-style: normal;
-  font-size: 30px;
-  height: 30px;
-  margin-top: 20px;
-  font-weight: bold;
-}
-
-.cadastro-button {
-  margin-top: 420px;
-  margin-left: 80px;
-  padding: 23px 90px;
-  border: solid #FF6464;
-  border-radius: 20px;
-  background-color: #FF6464;
-  color: white;
-  font-size: 15px;
-  transition: 0.5s ease;
-}
-
-.form {
-  display: flex;
-}
-.cadastro-button:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
-
-.checkbox {
-  margin-left: 20px;
-
-}
-
-.label1 {
-  color: white;
-}
-
-.formulario {
-  display: flex;
-  flex-direction: column;
-  margin-top: 330px;
-  margin-left: 20px;
-  max-width: 800px;
-  padding: 40px;
-  border-radius: 30px;
-}
-.requiset {
-  padding: 15px 10px;
-}
-
 .valid-password-check {
-  color: #3ac403bd;
+  color: #aeffb6;
 }
 
 .invalid-password-check {
-  color: #fc0000;
-}
-
-.label-form {
-  color: #545974;
-  font-family: 'Bebas Neue';
-  font-style: normal;
-  font-size: 25px;
-  height: 20px;
-  font-weight: bold;
-  margin-bottom: 8px;
-  margin-top: 12px;
-}
-
-.input-form {
- border: 2px solid #FF6464;
- border-radius: 10px;
- padding: 3px 5px 3px 6px;
-}
-
-.isPasswordValid {
-  background-color: #fc0000;
-  color: #ffffff;
-}
-
-.butao-2 {
- margin-top: 10px;
- padding: 4px 90px;
- border: solid #FF6464;
- border-radius: 20px;
- background-color: #FF6464;
- color: white;
- font-size: 15px;
- transition: 0.5s ease;
-}
-
-.butao-2:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
-
-.grid {
-  color: #545974;
-  font-family: 'Bebas Neue';
-  font-style: normal;
-  font-size: 18px;
-  font-weight: bold;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  margin-top:30px;
-  margin-left: 40px;
-  border: solid 5px #FF6464;
-  border-radius: 20px;
-  background-color: #ffffff;
-  color: #545974;
-  padding: 20px;
-  width: 160px;
-}
-
-.servico {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin-left: 4px;
-  margin-top: 2px;
-}
-
-.button-3 {
-  margin-top: 13px;
-  margin-left: 22px;
-  padding: 5px;
-  border: 1px solid #FF6464;
-  background-color: #FF6464;
-  border-radius: 7px;
-  color: #ffffff;
-}
-
-.button-3:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
-
-.div-flex {
-  display: flex;
+  color: #f58989;
 }
